--- a/example-usage.html
+++ b/example-usage.html
@@ -77,7 +77,7 @@
 		</div>
 		<div>
 			Notification:
-			<p>Pro použití příkladů s API <code>Notification</code> jsou nutné oprávnění, bez nich se notifikace <strong>nezobrazí</strong>.</p>
+			<p>Pro použití příkladů s API <code>Notification</code> jsou nutné oprávnění, bez nich se notifikace <strong>nezobrazí</strong>. Bez oprávnění se po volání <code>Notification</code> provede <code>onerror</code> event</p>
 			<pre><code class="language-javascript">&lt;script defer&gt;
 	Notification.requestPermission();
 &lt;/script&gt;</code></pre>
