--- a/example-usage.html
+++ b/example-usage.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Dialogic html example</title>
-	<link rel="preload" as="script" href="/js/modules/importWithIntegrity.mjs" integrity="sha256-cfOxrPKw+HRch/o1HAGTjzeo5g+8Ho2VW5Ki75Y6DII=" crossorigin="anonymous">
+	<link rel="preload" as="script" href="/modules/importWithIntegrity.mjs" integrity="sha256-cfOxrPKw+HRch/o1HAGTjzeo5g+8Ho2VW5Ki75Y6DII=" crossorigin="anonymous">
 	<!-- <link rel="stylesheet" href="/notific.css" crossorigin="anonymous" integrity="sha256-DErgeoS4SQg0UMgS8E4mhJbyqNPHbyooBGsPqlRQviw="> -->
 	<style>
 		html {
@@ -42,6 +42,19 @@
 	<h1>Dialogic v 0.1</h1>
 	<p>Dialog element javascript working like native <a href="https://developer.mozilla.org/en-US/docs/Web/API/Notification">Notification</a></p>
 	<p>Just vanilla javascript, no <s>jQuery</s> or other libraries. Styles and examples included in repo. Same parameters as browser's default <code>Notification()</code> function</p>
+
+	<h2>Rozdíly mezi <code>Dialogic</code> a <code>Notification</code></h2>
+	<ul>
+		<li><code>Dialogic</code> <b>ne</b>obsahuje vlastnost <code>permission</code>, popup můžete zobrazit kdykoliv, bez nutnosti získávat oprávnění</li>
+		<li><code>Dialogic</code> má ve výchozím nastavení <small>(dá se změnit)</small> option <code>requireInteraction: true</code> čili popup se automaticky neskrývají, na rozdíl od <code>Notification</code>, které mají ve výchozím nastavení <code>requireInteraction: false</code> <small>(taktéž se dá změnit během zakládání instance <code>Notification</code>)</small></li>
+		<li><code>Dialogic</code> zatím <b>ne</b>má implementované vlastnosti:
+			<ul>
+				<li><code>actions</code></li>
+				<li><code>badge</code></li>
+			</ul>
+		</li>
+
+	</ul>
 
 	<div id="dialogic-root" hidden></div>
 	<script type="module" src="dialogic.mjs?v=0.1" crossorigin="anonymous" data-integrity="sha256-todo"></script>
@@ -733,6 +746,80 @@
 						} );
 						n.onclick = () => { alert( 'zvoleno ano' ); };
 						n.onclose = () => { alert( 'zvoleno ne' ); };
+					}, {
+						capture: false,
+						once: false,
+						passive: true,
+					} );
+					document.currentScript.insertAdjacentElement( 'afterend', button );
+				} )();
+			</script>
+		</div>
+	</section>
+
+	<br>
+	<h3>Vlastnost <code>data</code> pro předání libovolného datového objektu</h3>
+
+	<section class="two-examples">
+		<div>
+			Dialogic… data se vypíší v konzoli:
+			<pre><code class="language-javascript">&lt;script type="module"&gt;
+	let d = new Dialogic( "New review activity", {
+		body: "Your code submission has received 3 new review comments.",
+		data: {
+			url: "https://example.com/review/12345",
+			status: "open",
+		},
+	} );
+	console.log( d.data ); // Logs the data object
+&lt;/script&gt;</code></pre>
+			<script defer>
+				( () => {
+					const button = document.createElement( 'button' );
+					button.textContent = 'Spustit kód';
+					button.addEventListener( 'click', function ( /** @type {PointerEvent} */ event ) {
+						let d = new Dialogic( "New review activity", {
+							body: "Your code submission has received 3 new review comments.",
+							data: {
+								url: "https://example.com/review/12345",
+								status: "open",
+							},
+						} );
+						console.log( d.data ); // Logs the data object
+					}, {
+						capture: false,
+						once: false,
+						passive: true,
+					} );
+					document.currentScript.insertAdjacentElement( 'afterend', button );
+				} )();
+			</script>
+		</div>
+		<div>
+			<a href="https://developer.mozilla.org/en-US/docs/Web/API/Notification/data">Notification</a> … data se vypíší v konzoli:
+			<pre><code class="language-javascript">&lt;script&gt;
+	let n = new Notification( "New review activity", {
+		body: "Your code submission has received 3 new review comments.",
+		data: {
+			url: "https://example.com/review/12345",
+			status: "open",
+		},
+	} );
+	console.log( n.data ); // Logs the data object
+&lt;/script&gt;</code></pre>
+			<script defer>
+				( () => {
+					const button = document.createElement( 'button' );
+					button.textContent = 'Spustit kód';
+					button.addEventListener( 'click', function ( /** @type {PointerEvent} */ event ) {
+						let n = new Notification( "New review activity", {
+							body: "Your code submission has received 3 new review comments.",
+							data: {
+								url: "https://example.com/review/12345",
+								status: "open",
+							},
+						} );
+						console.log( n.data ); // Logs the data object
 					}, {
 						capture: false,
 						once: false,
